deployment-exp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-exp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-exp
  template:
    metadata:
      labels:
        app: mongo-exp
    spec:
      containers:
      - name: mongoexp
        image: mongo-express
        ports:
        - containerPort: 8081
