deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: #deployment
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  mongodb #using label of the pod
  template: #pod 
    metadata:
      labels:
        app:  mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
